@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1821] fixed map problem if icon element is not selected (Aly)
  - [ZBX-1177] returned slide-level refresh rate (Aly)
  - [ZBX-1331] implemented auto adding selected group on host creation (Aly)
  - [ZBX-1427] fixed adding Actions through API (Aly)
